--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -304,7 +304,7 @@ ZimmerEuze06,
   author = {Artale, A. and Franconi, E. and Wolter, F. and Zakharyaschev, M.},
   title = {A temporal description logic for reasoning about conceptual schemas and queries},
   journal = {In: S. Flesca and S. Greco and N. Leone and G. Ianni, Proceedings of the 8th Joint European Conference on Logics in Artificial Intelligence (JELIA-02), Springer LNAI 2424, 98-110, 2002},
-  year = ,
+  year = 2002,
 }
 @article{Artale07a,
   author = {Artale, A. and Parent, C. and Spaccapietra, S.},
@@ -324,3 +324,54 @@ ZimmerEuze06,
   journal = {In: Gerhard Brewka and Jerome Lang, 11th International Conference on Principles of Knowledge Representation and Reasoning (KR'08), 673-683, AAAI Press 2008},
   year = 2008,
 }
+
+@Article{BizerHeath09,
+  author = 	 {Bizer, C. and Heath, T.},
+  title = 	 {Linked data---the story so far},
+  journal = 	 {International journal on semantic web and information systems},
+  year = 	 {2009},
+  volume = 	 {5},
+  number = 	 {3},
+  pages = 	 {1--22},
+}
+
+@book{DBLP:series/lncs/5445,
+  editor    = {Heiner Stuckenschmidt and
+               Christine Parent and
+               Stefano Spaccapietra},
+  title     = {Modular Ontologies: Concepts, Theories and Techniques for
+               Knowledge Modularization},
+  booktitle = {Modular Ontologies},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5445},
+  year      = {2009},
+  isbn      = {978-3-642-01906-7},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-01907-4},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@book{DBLP:books/daglib/0032976,
+  author    = {J{\'e}r{\^o}me Euzenat and
+               Pavel Shvaiko},
+  title     = {Ontology Matching, Second Edition},
+  publisher = {Springer},
+  year      = {2013},
+  isbn      = {978-3-642-38720-3},
+  pages     = {I-XVII, 1-511},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@InProceedings{KhanKeet13,
+  author = 	 {Khan, Z. and Keet, C.M.},
+  title = 	 {Addressing issues in foundational ontology mediation},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle = {5th International Conference on Knowledge Engineering and Ontology Development (KEOD'13), Vilamoura, Portugal, 19-22 September},
+  year = 	 {2013},
+  editor = 	 {Filipe, J. and Dietz, J.},
+  pages = 	 {5--16},
+  publisher = {SCITEPRESS},
+}
+
+
