responded to Maria's comments of 2014-03-26

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1439,7 +1439,6 @@ that targets specific applications or reasoning methods}
 \end{definitions}
 
 \sclause{OMS Language Serializations}
-\ednote{Christoph: incorporate Maria's comments}
 
 \begin{definitions}
   \termdefinition{serialization}{specific syntactic encoding of a given \termref{OMS language}}
@@ -1447,7 +1446,7 @@ that targets specific applications or reasoning methods}
     Serializations serve as standard formats for exchanging OMSs between tools.
   \end{note}
   \begin{example}
-    OWL uses the term ``serialization''; the following are standard OWL serializations: OWL functional-style syntax, OWL XML, OWL Manchester syntax, plus any serialization of RDF (\eg RDF/XML, Turtle, ...)
+    OWL uses the term ``serialization''; the following are standard OWL serializations: OWL functional-style syntax, OWL/XML, OWL Manchester syntax, plus any standard serialization of RDF (\eg RDF/XML, Turtle, \dots).  However, RDF/XML is the only one tools are required to implement.
   \end{example}
   \begin{example}
     Common Logic uses the term ``dialect''; the following are standard Common Logic dialects: Common Logic Interchange Format (CLIF), Conceptual Graph Interchange Format (GCIF), eXtended Common Logic Markup Language (XCL).
