--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1003,7 +1003,7 @@ We expect most DOL-aware applications to support a fixed (possibly extensible) s
 
 
 \chapter{Normative References}
-\begin{itemize}
+\begin{enumerate}
 % OLD text
 % The following referenced documents are indispensable for the application of this document. For dated references, only
 % the edition cited applies. For undated references, the latest edition of the referenced document (including any
@@ -1025,7 +1025,9 @@ We expect most DOL-aware applications to support a fixed (possibly extensible) s
   %\item{W3C/TR REC-rdf-sparql-query:2008}{SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
   \item{W3C/TR REC-rdf-schema:2004}{RDF Vocabulary Description Language 1.0: RDF Schema. W3C Recommendation, 10 February 2004.\\ \url{http://www.w3.org/TR/2004/REC-rdf-schema-20040210/}}
   \item{W3C/TR REC-rdf-mt:2004}{RDF Semantics.  W3C Recommendation, 02 February 2004.  \url{http://www.w3.org/TR/2004/REC-rdf-mt-20040210/}}
-\end{itemize}
+\end{enumerate}
+\ednote{more, see RFP}
+\ednote{introduce a separate reference scheme for normative references}
 \todonote[author=Christoph Lange,date=D:201107301339+02'00',type=q-all]{I have listed them roughly in the order of occurrence: OK?}
 
 
@@ -1292,10 +1294,11 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional ex
     Consider an OWL DL ontology about wines, from which we would like to extract a module about white wines. That module would contain the declaration of the non-logical symbol ``white wine'', all declarations of non-logical symbols related to ``white wine'', and all sentences about all of these non-logical symbols.
   \end{example}
 
-\termdefinition{approximant \synonym uniform interpolant}{
+\termdefinition{approximant}{
 best possible (in the sense of a maximal set of logical consequences)
 approximation of an OMS in a smaller \termref{signature} or
 \termref{OMS language}}
+\ednote{reference, synonym: uniform interpolant}
 
 \termdefinition{closed world assumption}{presumption that what is
     not known to be true, is false}
@@ -1550,6 +1553,7 @@ TODO Michael: explain the relationship to other notions of interoperability (fro
 \end{definitions}
 
 \chapter{Symbols}
+\ednote{add OMG stuff}
 
 As listed below, these symbols and abbreviations are generally for the main clauses of the \IS. Some annexes may introduce their own symbols and abbreviations which will be grouped together within that annex.
 
@@ -1586,6 +1590,10 @@ As listed below, these symbols and abbreviations are generally for the main clau
 
 
 \chapter{Additional Information}
+\ednote{have a look at ODM's Additional Information}
+\ednote{this could be put in section 1 (if possible with OMG), or turned into informative
+  notes, or deleted}
+
 An ontology is a formal description of the concepts and relationships
 that are of interest to an agent or a community of agents. Today,
 ontologies are applied in eBusiness, eHealth, eGovernment, eInclusion,
